--- a/NineDigit.SerialPort/NineDigit.SerialPort.csproj
+++ b/NineDigit.SerialPort/NineDigit.SerialPort.csproj
@@ -4,7 +4,7 @@
     <Import Project="..\Versions.props" />
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>9.0</LangVersion>
@@ -30,7 +30,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <IncludeSymbols>true</IncludeSymbols>
-        <Copyright>(c) 2023</Copyright>
+        <Copyright>(c) 2025</Copyright>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
@@ -48,8 +48,12 @@
         </AssemblyAttribute>
     </ItemGroup>
     
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.0.0" />
+    </ItemGroup>
+    
     <ItemGroup>
-      <PackageReference Include="NineDigit.Mac.IOKit" Version="1.0.0" />
+      <PackageReference Include="NineDigit.Mac.IOKit" Version="1.1.0" />
       <PackageReference Include="System.Management" Version="6.0.0" />
     </ItemGroup>
 
